hphp/hack/test/typecheck/reactive/mayberx9.php.exp
File "mayberx9.php", line 12, characters 10-44:
Reactive functions can only call other reactive functions. (Typing[4200])
  File "mayberx9.php", line 5, characters 10-16:
  This function is local reactive.
